tests/errors/sem.invalid-array-index-name.dot-access.or
main :: () -> void {
    vec := [2]f64.{1, 2};
    vec.h;
};
